[package]
name = "emu-cli"
version = "0.4.2"
edition = "2021"
description = "Linux desktop-friendly CLI qemu wrangling tool"
authors = ["Erik Hollensbe <erik+github@hollensbe.org>"]
license = "MIT"
homepage = "https://github.com/erikh/emu"
repository = "https://github.com/erikh/emu"
keywords = [ "qemu", "vm", "linux", "cli", "ui" ]

[dependencies]
tinytemplate = "^1"
serde = { version = "^1", features = [ "derive" ] }
dirs = "^5"
anyhow = "^1"
clap = { version = "^4", features = [ "derive" ] }
tokio = { version = "^1", features = [ "full" ] }
rtnetlink = "^0.14"
netlink-packet-core = "*"
netlink-packet-utils = "*"
netlink-packet-route = "*"
netlink-proto = "*"
netlink-sys = "*"
async-trait = "^0.1"
futures = "^0.3"
futures-channel = "*"
serde_json = "^1"
fork = "^0.1"
byte-unit = "^5"
toml = "^0.8"
kdam = "^0.5"

[dev-dependencies]
tempfile = "^3"

[profile.release]
strip = true
lto = true
codegen-units = 24
opt-level = 3
